{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 124,
  "lineage": "e707d33e-1aa2-4789-6339-a126becba985",
  "resources": [
    {
      "module": "module.create_bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastionhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/publicIPAddresses/vnet-20222-bastion-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.64.87.104",
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "vnet-20222-bastion-pip",
            "resource_group_name": "20222-rg-core",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.create_bastion",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionhost",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "20222-rg-core",
            "virtual_network_name": "vnet-20222"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.create_vnet",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-default-nsg",
            "location": "westus2",
            "name": "vnet-20222-default-nsg",
            "resource_group_name": "20222-rg-core",
            "security_rule": [],
            "tags": {
              "application": "networking"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_subnet.vnet",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.create_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/default",
            "name": "default",
            "resource_group_name": "20222-rg-core",
            "virtual_network_name": "vnet-20222"
          },
          "dependencies": [
            "random_integer.deployment",
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.create_vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/default",
            "network_security_group_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-default-nsg",
            "subnet_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/default"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_network_security_group.nsg",
            "module.create_vnet.azurerm_subnet.vnet",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.create_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "2158cd19-5f0f-444b-a73f-eb015b488c3b",
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222",
            "location": "westus2",
            "name": "vnet-20222",
            "resource_group_name": "20222-rg-core",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/default",
                "name": "default",
                "security_group": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-default-nsg"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              },
              {
                "address_prefix": "10.0.16.0/20",
                "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/aks_subnet",
                "name": "aks_subnet",
                "security_group": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-aks_subnet-nsg"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/iaas_subnet",
                "name": "iaas_subnet",
                "security_group": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-iaas_subnet-nsg"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/paas_subnet",
                "name": "paas_subnet",
                "security_group": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-paas_subnet-nsg"
              }
            ],
            "tags": {
              "application": "networking"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.create_windowsserver_iis01",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-iaas/providers/Microsoft.Network/networkInterfaces/iis01-20222-nic",
            "internal_domain_name_suffix": "dhgvqiipl3fujjz53mavwsemhd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/iaas_subnet"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-6E-CF-71",
            "name": "iis01-20222-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "20222-rg-iaas",
            "virtual_machine_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-iaas/providers/Microsoft.Compute/virtualMachines/iis01-20222"
          },
          "dependencies": [
            "module.subnet_iaas.azurerm_subnet.extrasubnet",
            "random_integer.deployment",
            "azurerm_resource_group.iaas",
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.create_windowsserver_iis02",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-iaas/providers/Microsoft.Network/networkInterfaces/iis02-20222-nic",
            "internal_domain_name_suffix": "dhgvqiipl3fujjz53mavwsemhd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/iaas_subnet"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-6F-07-E6",
            "name": "iis02-20222-nic",
            "private_ip_address": "10.0.2.6",
            "private_ip_addresses": [
              "10.0.2.6"
            ],
            "resource_group_name": "20222-rg-iaas",
            "virtual_machine_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-iaas/providers/Microsoft.Compute/virtualMachines/iis02-20222"
          },
          "dependencies": [
            "module.subnet_iaas.azurerm_subnet.extrasubnet",
            "random_integer.deployment",
            "azurerm_resource_group.iaas",
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.create_windowsserver_sql",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-iaas/providers/Microsoft.Network/networkInterfaces/sql-20222-nic",
            "internal_domain_name_suffix": "dhgvqiipl3fujjz53mavwsemhd.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/iaas_subnet"
              }
            ],
            "location": "westus2",
            "mac_address": "00-0D-3A-6D-48-A1",
            "name": "sql-20222-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "20222-rg-iaas",
            "virtual_machine_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-iaas/providers/Microsoft.Compute/virtualMachines/sql-20222"
          },
          "dependencies": [
            "random_integer.deployment",
            "azurerm_resource_group.iaas",
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "module.subnet_iaas.azurerm_subnet.extrasubnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_aks",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-aks_subnet-nsg",
            "location": "westus2",
            "name": "vnet-20222-aks_subnet-nsg",
            "resource_group_name": "20222-rg-core",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.create_vnet.azurerm_virtual_network.vnet",
            "module.subnet_aks.azurerm_subnet.extrasubnet",
            "random_integer.deployment",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_aks",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "extrasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.16.0/20",
            "address_prefixes": [
              "10.0.16.0/20"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/aks_subnet",
            "name": "aks_subnet",
            "resource_group_name": "20222-rg-core",
            "virtual_network_name": "vnet-20222"
          },
          "dependencies": [
            "random_integer.deployment",
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_aks",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/aks_subnet",
            "network_security_group_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-aks_subnet-nsg",
            "subnet_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/aks_subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "module.subnet_aks.azurerm_network_security_group.nsg",
            "module.subnet_aks.azurerm_subnet.extrasubnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_iaas",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-iaas_subnet-nsg",
            "location": "westus2",
            "name": "vnet-20222-iaas_subnet-nsg",
            "resource_group_name": "20222-rg-core",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "module.subnet_iaas.azurerm_subnet.extrasubnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_iaas",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "extrasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/iaas_subnet",
            "name": "iaas_subnet",
            "resource_group_name": "20222-rg-core",
            "virtual_network_name": "vnet-20222"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_iaas",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/iaas_subnet",
            "network_security_group_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-iaas_subnet-nsg",
            "subnet_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/iaas_subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "module.subnet_iaas.azurerm_network_security_group.nsg",
            "module.subnet_iaas.azurerm_subnet.extrasubnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_paas",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-paas_subnet-nsg",
            "location": "westus2",
            "name": "vnet-20222-paas_subnet-nsg",
            "resource_group_name": "20222-rg-core",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "module.subnet_paas.azurerm_subnet.extrasubnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_paas",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "extrasubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/paas_subnet",
            "name": "paas_subnet",
            "resource_group_name": "20222-rg-core",
            "virtual_network_name": "vnet-20222"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "random_integer.deployment"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_paas",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/paas_subnet",
            "network_security_group_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/networkSecurityGroups/vnet-20222-paas_subnet-nsg",
            "subnet_id": "/subscriptions/acb3aaa4-a981-4fab-8476-e38eb0f7761a/resourceGroups/20222-rg-core/providers/Microsoft.Network/virtualNetworks/vnet-20222/subnets/paas_subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.create_vnet.azurerm_virtual_network.vnet",
            "module.subnet_paas.azurerm_network_security_group.nsg",
            "module.subnet_paas.azurerm_subnet.extrasubnet",
            "random_integer.deployment"
          ]
        }
      ]
    }
  ]
}